--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "email-validator": "^2.0.4",
+    "firebase": "^8.10.0",
+    "moment": "^2.29.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-custom-scrollbars": "^4.2.1",
+    "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.4",
+    "react-icons": "^4.3.1",
+    "react-loader-spinner": "^4.0.0",
+    "timeago-react": "^3.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
